# gifree

./: CMakeLists.txt
cmake/: gifree_cmake_settings.h.in
src/: main.c
src/gif/: CMakeLists.txt  gf_gif.c  gf_gif.h  gf_gif_dec.c  gf_gif_file_constants.h
src/windows/: gf_main_window.c  gf_main_window.h
